# sirikali

./: .CMakeLists.txt.kate-swp  .changelog.kate-swp  .gitignore  .index.md.kate-swp  ABOUT ME  BUILD_INSTRUCTIONS  CMakeLists.txt  COPYING  COPYRIGHT  LICENSE.txt  LINUX_BUILD_INSTRUCTIONS  MACOS_BUILD_INSTRUCTIONS  OSX_BUILD_INSTRUCTIONS  README  README.md  WINDOWS_BUILD_INSTRUCTIONS.txt  _config.yml  build_windows.ps1  changelog  index.html  index.md  new release checklist  params.json  rLinux
.github/workflows/: LinuxQt6Git.yml  MacOsGit.yml  MacOsRelease.yml  WindowsGit.yml  WindowsRelease.yml  buildGit.yml  buildLinuxQt6Git.yml  buildMacOsGit.yml  buildRelease.yml
_includes/: head-custom.html
custom backends/: README  archivemount.json  fuseiso.json  gdrive.json  google-drive-ocamlfuse.json  utahfs.json
debian/: README.Debian  changelog  clean  control  copyright  gbp.conf  lintian-overrides  rules  sirikali.1.md  sirikali.1.ronn  sirikali.appdata.xml  sirikali.install  sirikali.manpages  sirikali.preinst  watch
debian.upstream/: BUILD_INSTRUCTIONS  changelog  copyright  menu  rules
debian/patches/: 0001-Add-Comment-to-desktop-file.patch  0001-Add-a-PATH-for-called-siritasks.patch  resolve-tar-to-git  series  versionupdate
debian/upstream/: metadata  signing-key.asc
debian_package_info/: BINARY_INSTALL_INSTRUCTIONS  BUILD_INSTRUCTIONS  changelog  control  copyright  cryfs-gui.install  menu  sirikali.install  watch
icons/256x256/: sirikali.icns
libs/include/: gcrypt.h  gpg-error.h
rpm/: BUILD_INSTRUCTIONS  sirikali.spec
src/: Json.cpp  Json.h  appicon.rc  backends.cpp  backends.h  checkforupdates.cpp  checkforupdates.h  checkforupdateswindow.cpp  checkforupdateswindow.h  checkforupdateswindow.ui  cmd.hpp  compatibility.hpp  configfileoption.cpp  configfileoption.h  configfileoption.ui  configoptions.cpp  configoptions.h  configoptions.ui  configoptions.ui.autosave  createbackendwindow.cpp  createbackendwindow.h  createbackendwindow.ui  cryfscreateoptions.cpp  cryfscreateoptions.h  cryfscreateoptions.ui  crypto.cpp  crypto.h  debugwindow.cpp  debugwindow.h  debugwindow.ui  dialogmsg.cpp  dialogmsg.h  dialogmsg.ui  dialogok.cpp  dialogok.h  dialogok.ui  ecryptfscreateoptions.cpp  ecryptfscreateoptions.h  ecryptfscreateoptions.ui  encfscreateoptions.cpp  (+96 more)
src/engines/: commandOptions.cpp  commandOptions.h  cryfs.cpp  cryfs.h  cryfscreateoptions.cpp  cryfscreateoptions.h  cryfscreateoptions.ui  cryptomator.cpp  cryptomator.h  custom.cpp  custom.h  customcreateoptions.cpp  customcreateoptions.h  customcreateoptions.ui  ecryptfs.cpp  ecryptfs.h  ecryptfscreateoptions.cpp  ecryptfscreateoptions.h  encfs.cpp  encfs.h  encfscreateoptions.cpp  encfscreateoptions.h  encfscreateoptions.ui  fscrypt.cpp  fscrypt.h  fscryptcreateoptions.cpp  fscryptcreateoptions.h  fscryptcreateoptions.ui  gocryptfs.cpp  gocryptfs.h  gocryptfscreateoptions.cpp  gocryptfscreateoptions.h  gocryptfscreateoptions.ui  options.cpp  options.h  options.ui  securefs.cpp  securefs.h  securefscreateoptions.cpp  securefscreateoptions.h  (+5 more)
src/flatpak/: fusermount  io.github.mhogomchungu.sirikali.desktop  io.github.mhogomchungu.sirikali.json  io.github.mhogomchungu.sirikali.metainfo.xml
src/flatpak/patches/: cryfs.patch  gocryptfs.patch  gocryptfs_version.patch  securefs-version.patch
src/lxqt_wallet/: BUILD_INSTRUCTIONS  CMakeLists.txt  LICENSE  changelog
src/lxqt_wallet/backend/: CMakeLists.txt  README
src/lxqt_wallet/frontend/: CMakeLists.txt  README  changepassworddialog.cpp  changepassworddialog.ui  lxqt_internal_wallet.cpp  lxqt_internal_wallet.h  lxqt_kwallet.cpp  lxqt_kwallet.h  lxqt_libsecret.cpp  lxqt_osx_keychain.cpp  lxqt_osx_keychain.h  lxqt_osx_keychain_private.h  lxqt_wallet.cpp  lxqt_wallet.h  password_dialog.cpp  password_dialog.ui
src/lxqt_wallet/frontend/libsecret/: CMakeLists.txt
src/sirikali_cppcryptfs/: CMakeLists.txt  main.cpp
src/siripolkit/: CMakeLists.txt  main.cpp  zulupolkit.cpp  zulupolkit.h
src/zuluPolkit/: CMakeLists.txt  zulupolkit.cpp
translations/: README  ar_SA.qm  ar_SA.ts  de_DE.qm  de_DE.ts  en_US.ts  es.MX.ts  es_ES.qm  es_ES.ts  es_MX.qm  es_MX.ts  fr_FR.qm  fr_FR.ts  pl_PL.qm  pl_PL.ts  ru_RU.qm  ru_RU.ts  sp.MX.qm  sp.MX.ts  sv_SE.ts  zh_CN.qm  zh_CN.ts
windows/: installer.iss
